c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_parse/sizeof_type_no_parens.c
// you can't get the size of a type name without parenthesizing it
int main(void) {
    return sizeof int;
}